<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".buysell.BuySellFragment"
                                             android:background="@color/colorWhite">
    <!-- Alert label -->
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/BuySellAlertText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" android:id="@+id/linearLayout">

        <EditText
                android:textSize="15sp"
                android:textColor="@color/colorGreyDark"
                android:text="@string/buysell_edittext_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:inputType="number"
                android:padding="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_edit_text"/>
        <Button
                android:text="@string/plus"
                android:layout_width="@dimen/buysell_plus_minus_button_width"
                android:layout_height="@dimen/buysell_plus_minus_button_height"
                style="@style/BuySellPlusMinusButton"/>
        <Button
                android:text="@string/minus"
                android:layout_width="@dimen/buysell_plus_minus_button_width"
                android:layout_height="@dimen/buysell_plus_minus_button_height"
                style="@style/BuySellPlusMinusButton"/>

    </LinearLayout>

    <TextView
            android:text="@string/buysell_above_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    <TextView
            android:text="@string/buysell_current_rate_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/linearLayout2">
        <TextView
                android:text="@string/buysell_price_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <!-- Sell button -->
            <RadioButton
                    style="@style/BuySellRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/sell"/>

            <!-- Buy button -->
            <RadioButton
                    android:checked="true"
                    style="@style/BuySellRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/buy"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <TextView
                android:text="@string/buysell_delivery_methods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_weight="1"/>
        <ImageButton
                android:background="@null"
                android:layout_gravity="end"
                android:src="@drawable/vector_ic_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/imageView" android:layout_weight="0"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/linearLayout5">
        <TextView
                android:text="@string/buysell_by_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"/>
        <TextView
                android:text="@string/buysell_by_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView6" android:layout_weight="1"/>
        <TextView
                android:text="@string/buysell_push"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/linearLayout4">
        <Button
                style="@style/BuySellConfirmCancelButton"
                android:text="@string/buysell_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/buysell_confirm_cancel_button_height"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"/>
        <Button
                style="@style/BuySellConfirmCancelButton"
                android:text="@string/buysell_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/buysell_confirm_cancel_button_height"
                android:layout_weight="1"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>